# dlm_steer

./: .gitignore  analysis.ipynb  ar-get_steer.ipynb  ar-get_steer.py  ar-steering.ipynb  ar-use_steer.ipynb  debug.sh  diffusion-get_steer.ipynb  diffusion-get_steer.py  diffusion-steering.ipynb  diffusion-steering.py  diffusion-use_steer.ipynb  diffusion_gen_functions.py  eval_dito.py  eval_pattern.py  eval_timpa.py  get_benchmark_sample.py  highlighted.html  main.py  pyproject.toml  rsc2.sh  run.py  run.sh  run_benchmark.py  run_benchmark2.sh  run_benchmark_score.sh  run_catdog.sh  run_eval.sh  run_eval_pattern.sh  run_imdb.sh  run_imdb2.sh  run_score_bench.py  run_scoring.py  run_scoring.sh  run_timpa.py  run_timpa.sh  sandbox.py  sandbox2.py  sandbox3.py  sweep_eval_timpa.py  (+10 more)
archive/: ar-steering.py  diffusion-evaluate.py  diffusion-steering-val.py  diffusion-steering.py  main.py  run_eval_timpa.sh  sweep_eval_timpa.py
archived/: ar-get_steer.py  diffusion-evaluate.py  diffusion-get_steer.py  diffusion-steering-val.py  diffusion-steering.py  dlm_steer_output.txt  eval_dito.py  eval_timpa.py  highlighted.html  make_gif.py  results_ranked.csv  results_ranked_balanced.csv  run_eval_pattern.sh  sweep_eval_timpa.py  timpa_vs_baseline_100_samples.csv
cats_dogs/: README.md  extract_cats_dogs_vectors.py  make_paper_assets.py  postprocess_cats_dogs.py  run_asap_hyperparam_ablation.py  run_cats_dogs_greedy_ablation.py  run_prompt_baseline.py
extract_vectors/: README.md  download_dataset.py  extract_steer_vectors.py  merge_eval_results.py  resteer_val_sweep_eval.py  (+1 more)
(+607 files in other folders)
