[project]
name = "dlm-steer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers==4.38.2",
]
